Fixed paddign top on smaller screents

--- a/app/static/gallery.css
+++ b/app/static/gallery.css
@@ -31,7 +31,7 @@ footer p {
 }
 
 body {
-    padding-top: 1rem;
+    padding-top: 2rem;
 }
 
 @media (min-width: 768px) {
